<resources>
    <string name="app_name">Project</string>
    <string name="pass">Password</string>
    <string name="repass">Re-Enter Password</string>
    <string name="u_name">Email</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="fb_text">Connect With Facebook</string>
    <string name="google_text">Connect with Google</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">DOB</string>
    <string name="ForgotPassword">Forgot Password?</string>
</resources>
